Login project creation

--- a/HospitalScheduling/HospitalScheduling/appsettings.json
+++ b/HospitalScheduling/HospitalScheduling/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HospitalScheduling-48426682-B453-4E4E-B90F-1C6D107BDD39;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
